--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -12,7 +12,7 @@
         android:weightSum="1">
 
         <TextView
-            android:text="メインセット"
+            android:text="1RM重量"
             android:textSize="24sp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
