changed layout. add button

--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -20,10 +20,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/main_set"
-            android:layout_weight="0.6" />
+            android:layout_weight="0.4" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -35,12 +35,21 @@
         <TextView
             android:text="kg"
             android:textSize="24sp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/main_kg"
-            android:layout_weight="0.2" />
+            android:layout_weight="0.1" />
+
+        <Button
+            android:text="計算"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/button_calc"
+            android:layout_weight="0.25" />
     </LinearLayout>
 
     <TableLayout
