--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -29,7 +29,7 @@
             android:layout_marginBottom="10dp"
             android:inputType="number"
             android:ems="3"
-            android:id="@+id/editText"
+            android:id="@+id/max_weight"
             android:layout_weight="0.2" />
 
         <TextView
