change layout. add percent

--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -55,18 +55,20 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="40dp">
+        android:paddingLeft="30dp"
+        >
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:paddingBottom="10dp"
+                android:weightSum="1">
 
                 <TextView
                     android:text="1set"
@@ -78,11 +80,21 @@
                     />
 
                 <TextView
+                    android:text="20%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set1_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="20kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set1kg"
                     android:layout_weight="0.4"
                     />
@@ -110,11 +122,21 @@
                   />
 
                 <TextView
+                    android:text="55%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set2_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="55kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set2kg"
                     android:layout_weight="0.4"
                     />
@@ -142,11 +164,21 @@
                     />
 
                 <TextView
+                    android:text="70%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set3_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="70kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set3kg"
                     android:layout_weight="0.4"
                     />
@@ -174,11 +206,21 @@
                     />
 
                 <TextView
+                    android:text="80%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set4_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="80kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set4kg"
                     android:layout_weight="0.4"
                     />
@@ -206,11 +248,21 @@
                     />
 
                 <TextView
+                    android:text="80%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set5_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="80kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set5kg"
                     android:layout_weight="0.4"
                     />
@@ -238,11 +290,21 @@
                     />
 
                 <TextView
+                    android:text="80%"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/set6_per"
+                    android:layout_weight="0.2"
+                    />
+
+                <TextView
                     android:text="80kg"
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="120dp"
+                    android:paddingLeft="80dp"
                     android:id="@+id/set6kg"
                     android:layout_weight="0.4"
                     />
