--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -90,7 +90,7 @@
                     />
 
                 <TextView
-                    android:text="20kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -132,7 +132,7 @@
                     />
 
                 <TextView
-                    android:text="55kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
                     />
 
                 <TextView
-                    android:text="70kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -216,7 +216,7 @@
                     />
 
                 <TextView
-                    android:text="80kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -258,7 +258,7 @@
                     />
 
                 <TextView
-                    android:text="80kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -300,7 +300,7 @@
                     />
 
                 <TextView
-                    android:text="80kg"
+                    android:text=""
                     android:textSize="24sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
