--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -324,7 +324,7 @@
             android:text="戻る"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/back_button"
             android:layout_weight="0.3" />
 
         <Button
