--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,15 +13,15 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,14 +87,19 @@
                 android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.01"
+                android:layout_weight="0.04"
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/MAX_kg_view"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/MAX_kg_view"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -123,14 +128,19 @@
                 android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.01"
+                android:layout_weight="0.04"
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM3"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM3"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -160,14 +170,19 @@
                 android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.01"
+                android:layout_weight="0.04"
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM5"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM5"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -196,14 +211,19 @@
                 android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.01"
+                android:layout_weight="0.04"
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM7"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM7"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -230,17 +250,21 @@
             <TextView
                 android:text="  8回"
                 android:textSize="24dp"
-                android:layout_weight="0.01"
+                android:layout_weight="0.04"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/textView5" />
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:layout_width="150dp"
+                android:textSize="24dp"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/weight_RM8"
-                android:maxWidth="120dp"
+                android:maxWidth="70dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -273,10 +297,15 @@
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM10"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM10"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -308,10 +337,15 @@
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM12"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM12"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -343,10 +377,15 @@
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM15"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM15"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
@@ -377,10 +416,15 @@
                 android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/weight_RM20"
-                android:maxWidth="120dp"
+                android:layout_width="150dp"
                 android:textSize="24dp"
-                android:layout_width="120dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/weight_RM20"
+                android:maxWidth="70dp"
+                android:textSize="24dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
